--- a/templates/WebApp/map_chart.html
+++ b/templates/WebApp/map_chart.html
@@ -87,7 +87,7 @@
                             <tr>
                             <tr>
                                 <td>Station Name</td>
-
+<td>Date</td>
                                 <td>Precipitation</td>
                                 <td>Temperature</td>
                             </tr>
