--- a/templates/WebApp/about.html
+++ b/templates/WebApp/about.html
@@ -48,28 +48,23 @@
                     <div class="card-header py-3">
                         <h6 class="m-0 font-weight-bold text-primary">Team members</h6>
                     </div>
-                    <div class="card-body m-auto w-50">
-                        <div class="row row-centered pos">
-                            <div class="col-sm-3">
-                                <div><img src="{% static 'images/teammembers/TeamMember1.jpg' %}" alt="img1"
-                                          class="img-thumbnail team-member">
-                                    <p>Team member 1</p></div>
-                            </div>
-                            <div class="col-sm-3">
-                                <div><img src="{% static 'images/teammembers/TeamMember2.jpg' %}" alt="img1"
-                                          class="img-thumbnail team-member">
-                                    <p>Team member 2</p></div>
-                            </div>
-                            <div class="col-sm-3">
-                                <div><img src="{% static 'images/teammembers/TeamMember3.jpg' %}" alt="img1"
-                                          class="img-thumbnail team-member">
-                                    <p>Team member 3</p></div>
-                            </div>
-                            <div class="col-sm-3">
-                                <div><img src="{% static 'images/teammembers/TeamMember4.jpg' %}" alt="img1"
-                                          class="img-thumbnail team-member">
-                                    <p>Team member 4</p></div>
-                            </div>
+                    <div class="card-body text-center">
+                                <a href=""  class="p-3 d-inline-block text-decoration-none"><img src="{% static 'images/teammembers/TeamMember1.jpg' %}" alt="img1"
+                                          class="team-member">
+                                    <p>Team member 1</p></a>
+
+                                <a href=""  class="p-3 d-inline-block text-decoration-none"><img src="{% static 'images/teammembers/TeamMember2.jpg' %}" alt="img1"
+                                          class="team-member">
+                                    <p>Team member 2</p></a>
+
+                                <a href=""  class="p-3 d-inline-block text-decoration-none"><img src="{% static 'images/teammembers/TeamMember3.jpg' %}" alt="img1"
+                                          class="team-member">
+                                    <p>Team member 3</p></a>
+
+                                <a href=""  class="p-3 d-inline-block text-decoration-none"><img src="{% static 'images/teammembers/TeamMember4.jpg' %}" alt="img1"
+                                          class="team-member">
+                                    <p>Team member 4</p></a>
+
                         </div>
                     </div>
                 </div>
@@ -78,8 +73,8 @@
         <!-- Disclaimer -->
         <!-- Update the text inside <strong> in order to update the disclaimer text -->
         <div class="row">
-            <div class="col-lg-12 mb-4">
-                <div class="card shadow mb-4">
+            <div class="col-lg-12">
+                <div class="card shadow ml-4 mr-4 mb-4">
                     <div class="card-header py-3">
                         <h6 class="m-0 font-weight-bold text-primary">Disclaimer</h6>
                     </div>
@@ -104,7 +99,7 @@
         <!-- Update the path inside src of <img> tag in order to update the logo images -->
         <div class="row">
             <div class="col-lg-12">
-                <div class="card shadow mb-4">
+                <div class="card shadow m-4">
                     <div class="card-header py-3">
                         <h6 class="m-0 font-weight-bold text-primary">Logos</h6>
                     </div>
@@ -122,7 +117,7 @@
 
         <div class="row">
             <div class="col">
-                <button type="button" class="btn btn-info" data-bs-toggle="modal"
+                <button type="button" class="btn btn-info ml-4 mt-4" data-bs-toggle="modal"
                         data-bs-target="#aboutModal">
                     Learn how to modify this page
                 </button>
