--- a/templates/WebApp/app_base.html
+++ b/templates/WebApp/app_base.html
@@ -18,7 +18,7 @@
     <title>{% block title %}SERVIR AppTemplate{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <link href="{% static '/css/basic.css' %}" rel="stylesheet">
     <link href="{% static '/css/base.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static '/css/common.css' %}" rel="stylesheet" type="text/css">
