modal-dialog-centered

--- a/templates/WebApp/about.html
+++ b/templates/WebApp/about.html
@@ -188,7 +188,7 @@
     {% include 'WebApp/about_about.html' %}
     <div class="modal fade" id="teamMemberModal" tabindex="-1" role="dialog" aria-labelledby="teamMemberModalLabel"
          aria-hidden="true">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="teamMemberModalLabel">Team Member Name</h5>
