--- a/templates/WebApp/app_base.html
+++ b/templates/WebApp/app_base.html
@@ -37,7 +37,7 @@
 
                     <div class="float-sm-start ml-5">
                         <a
-                                class="align-items-center "
+                                class="align-items-center text-decoration-none"
                                 href="//www.usaid.gov/"
                                 id="navbarDropdownMenuAvatar"
                                 role="button"
@@ -50,7 +50,7 @@
                                     alt="USAID_seal_fullname_surrounding_USAID_shield_with_handclasp_USAID_blue_red_on_right_with_FromTheAmericanPeople_tagline">
                         </a>
                         <a
-                                class=" align-items-center"
+                                class=" align-items-center text-decoration-none"
                                 href="//www.nasa.gov/"
                                 id="navbarDropdownMenuAvatar"
                                 role="button"
