--- a/templates/WebApp/home_about.html
+++ b/templates/WebApp/home_about.html
@@ -5,7 +5,7 @@
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="homeModalLabel">About this page</h1>
+                    <h1 class="modal-title text-primary fs-5" id="homeModalLabel">About this page</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
