--- a/WebApp/static/css/about.css
+++ b/WebApp/static/css/about.css
@@ -16,6 +16,7 @@
     width: unset;
     margin-bottom: 10px;
 }
+
 .member-image img {
     border-radius: 10px;
 }
@@ -25,12 +26,14 @@
     margin: 0 15px;
 }
 
-.team-name{
+.team-name {
     font-weight: bold;
 }
-.team-biography{
-    height: 100px;
+
+.team-biography {
+    height: 100%;
     overflow-y: auto;
+    max-height: calc(100vh - 250px);
 }
 
 .pointer {
