--- a/templates/WebApp/about.html
+++ b/templates/WebApp/about.html
@@ -164,7 +164,7 @@
                     <h6 class="m-0 font-weight-bold text-primary">Logos</h6>
                 </div>
                 <div class="card-body text-center">
-                    <a href="" class="p-3"><img class="org-logo" src="{% static 'images/logos/AMZ_Alliance.jpg' %}"></a>
+                    <a href="" class="p-3"><img class="org-logo" src="{% static 'images/logos/Alliance Logo_EN color.png' %}"></a>
                     <a href="" class="p-3"><img class="org-logo" src="{% static 'images/logos/ICRISAT.jpg' %}"></a>
                     <a href="" class="p-3"><img class="org-logo" src="{% static 'images/logos/ICIMOD.jpg' %}"></a>
                     <a href="" class="p-3"><img class="org-logo" src="{% static 'images/logos/ADPC.jpg' %}"></a>
